2008-09-02  David Hyatt  <hyatt@apple.com>

        Add support for the canvas text APIs.

        Reviewed by olliej

        * fast/canvas/canvas-text-alignment.html: Added.
        * fast/canvas/canvas-text-baseline.html: Added.
        * platform/mac/fast/canvas/canvas-text-alignment-expected.checksum: Added.
        * platform/mac/fast/canvas/canvas-text-alignment-expected.png: Added.
        * platform/mac/fast/canvas/canvas-text-alignment-expected.txt: Added.
        * platform/mac/fast/canvas/canvas-text-baseline-expected.checksum: Added.
        * platform/mac/fast/canvas/canvas-text-baseline-expected.png: Added.
        * platform/mac/fast/canvas/canvas-text-baseline-expected.txt: Added.

2008-09-03  Adele Peterson  <adele@apple.com>

        Reviewed by Darin Adler.

        Test that display:none works on a search field's cancel button.

        * fast/forms/search-display-none-cancel-button.html: Added.
        * platform/mac/fast/forms/search-display-none-cancel-button-expected.checksum: Added.
        * platform/mac/fast/forms/search-display-none-cancel-button-expected.png: Added.
        * platform/mac/fast/forms/search-display-none-cancel-button-expected.txt: Added.

2008-09-02  Robert Blaut  <webkit@blaut.biz>

        Reviewed by Geoff Garen.

        Test for <https://bugs.webkit.org/show_bug.cgi?id=16913>
        Misplaced elements should not close DL lists.

        * fast/invalid/test-case-tr-th-td-should-not-close-dl-list-expected.txt: Added.
        * fast/invalid/test-case-tr-th-td-should-not-close-dl-list.html: Added.
        * platform/mac/fast/invalid/missing-dl-end-tag-expected.checksum:
        * platform/mac/fast/invalid/missing-dl-end-tag-expected.png:
        * platform/mac/fast/invalid/missing-dl-end-tag-expected.txt:
        * platform/mac/fast/invalid/missing-dt-end-tag-expected.checksum:
        * platform/mac/fast/invalid/missing-dt-end-tag-expected.png:
        * platform/mac/fast/invalid/missing-dt-end-tag-expected.txt:
