@@ -1,0 +1,25 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+<head>
+<title>Element floated right should have it left edge hidden outside the viewpoint</title>
+<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
+
+<style type="text/css">
+
+#container {float:right;width:5000px;height:100px;background:#6ea;text-align:right;}
+
+</style>
+
+
+</head>
+
+<body>
+
+<div id="container">
+Element floated right with a width of 5000px.
+</div>
+
+</body>
+</html>
